# strategic-partner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
data/pipeline/: classifier.py  models.py  transformer.py
data/results/: codebase_stats.json  exp1_hybrid_alpha.json  exp1_statistical_analysis.json  exp2_failure_analysis.json  exp2_rag_iterations.json  exp3_picp_latency.json  exp4_monte_carlo.json  exp4_monte_carlo_v3.json  exp5_trust_sensitivity.json  exp6_end_to_end.json  exp6_routing_analysis.json  exp7_degradation.json  run_all_summary.json  setup_distributions.json  setup_metrics.json  setup_pipeline_result.json  test_coverage.json  test_coverage_summary.json
experiments/: __init__.py  codebase_stats.py  exp1_hybrid_alpha.py  exp1_statistical_analysis.py  exp2_failure_analysis.py  exp2_rag_iterations.py  exp3_picp_latency.py  exp4_monte_carlo.py  exp4_monte_carlo_v3.py  exp5_trust_sensitivity.py  exp6_end_to_end.py  exp6_routing_analysis.py  exp7_degradation.py  generate_figures.py  run_all.py  setup_data.py  test_coverage_summary.py
orchestrator/: __init__.py
picp/: __init__.py  bus.py  distributed_lock.py  enforcer.py  exceptions.py  message.py  vector_clock.py
pillars/: base.py
pillars/knowledge/: __init__.py  hybrid_search.py  rag.py  vector_store.py
pillars/reasoning/: __init__.py  heuristic_policy.py  skill_executor.py  skill_registry.py
pillars/simulation/: __init__.py  distributions.py  monte_carlo.py  (+1 more)
scripts/: ingest_erp_data.py  run_query.py
tests/: conftest.py
utils/: llm.py
(+39 files in other folders)
